# EYO_Project

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
android_app/: settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/gradle/: libs.versions.toml
client/: Dockerfile  main.py  tcp_client.py
data/: bloom_filter_data.txt
doc/: protocol.docx  protocol.md  temp.rtf
include/: App.h  AppPersistenceHandler.h  BloomFilter.h  ConsoleInputHandler.h  FilePersistenceHandler.h  HashFunction.h  InputHandler.h  InsertCommand.h  IsFilteredCommand.h  PersistenceHandler.h  StdHashFunction.h  Test.h  command.h
include/project/: InsertURL.h
src/: BloomFilter.cpp  InsertURL.cpp  Test.cpp  main.cpp
src/app/: App.cpp  ConsoleInputHandler.cpp  DeleteCommand.cpp  InsertCommand.cpp  IsFilteredCommand.cpp  TCPInputHandler.cpp
src/client/: Dockerfile  main.py  tcp_client.py
src/hash/: HashFunction.cpp  StdHashFunction.cpp
src/persistence/: FilePersistenceHandler.cpp  PersistenceHandler.cpp
tests/: CMakeLists.txt  test_BloomFilter_Initializetion.cpp  test_DeleteURL.cpp  test_InsertURL.cpp  test_IsFilteredFunction.cpp  test_LoadFromFile  test_LoadFromFile.cpp  test_SaveToFile.cpp  test_handleClient.cpp  test_main.cpp  test_mainFlow.cpp  test_tcpConnection.cpp
url_server/: .gitignore
url_server/data/: bloom_filter_data.txt
url_server/include/: App.h  BloomFilter.h  ConsoleInputHandler.h  (+5 more)
web_app/: Dockerfile  package-lock.json  package.json
web_server/: .gitignore  app.js  package-lock.json  package.json
wiki/: README.md  old.md
(+173 files in other folders)
